--- a/blog.html
+++ b/blog.html
@@ -37,7 +37,7 @@
   </header>
   <section class="hero">
     <div class="container">
-      <h1>Articles</h1>
+      <h1 style="color: black;">Articles</h1>
       
     </div>
   </section>
