--- a/resources.html
+++ b/resources.html
@@ -9,7 +9,7 @@
 <body>
   <header>
     <div class="container header-inner">
-      <a href="index.html"><div class="logo"><img src="image/download.jpg" alt="logo"></div></a>
+     <a href="index.html"><div class="logo"><img src="image/0.png" alt="logo"></div></a>
   
       <!-- Hamburger button -->
       <div class="hamburger" id="hamburger">&#9776;</div>
@@ -35,7 +35,56 @@
     </div>
   </header>
 
-<p style="text-align: center;"> <strong>Comming Soon!</strong></p>
+ <main class="container">
+    <h1>End-of-Life & Grief Resources</h1>
+
+    <section>
+      <h2>Websites</h2>
+      <div class="card-grid">
+        <a class="card" href="https://www.theconversationproject.com" target="_blank">The Conversation Project</a>
+        <a class="card" href="https://thedeathdeck.com/" target="_blank">The Death Deck</a>
+        <a class="card" href="https://deathdoulas.com/resources" target="_blank">Death Doulas Resources</a>
+        <a class="card" href="https://www.nedalliance.org/" target="_blank">NEDA Alliance</a>
+      </div>
+    </section>
+
+    <section>
+      <h2>Grief Resources</h2>
+      <div class="card-grid">
+        <a class="card" href="https://www.griefinspiredme.com/" target="_blank">Grief Inspired Me</a>
+        <a class="card" href="https://www.griefshare.org/" target="_blank">GriefShare</a>
+        <a class="card" href="https://grief.com/" target="_blank">Grief.com</a>
+      </div>
+    </section>
+
+    <section>
+      <h2>Podcasts</h2>
+      <ul class="list">
+        <li>Grief Out Loud</li>
+        <li>The Dying Matters Podcast</li>
+        <li>End-of-Life University</li>
+        <li>6 Months or Less</li>
+      </ul>
+    </section>
+
+    <section>
+      <h2>Books</h2>
+      <ul class="list">
+        <li><strong>Farewell:</strong> Vital End-of-Life Questions – Edward T. Reagan</li>
+        <li><strong>When I'm Gone:</strong> Practical Notes – Kathleen Fraser</li>
+        <li><strong>The Top 5 Regrets of the Dying</strong> – Bronnie Ware</li>
+      </ul>
+    </section>
+
+    <section>
+      <h2>Meetups</h2>
+      <div class="card-grid">
+        <a class="card" href="https://deathcafe.com/user/" target="_blank">Death Cafe</a>
+        <a class="card" href="https://deathoverdinner.org/" target="_blank">Death Over Dinner</a>
+        <a class="card" href="https://www.deathoverdrafts.com/" target="_blank">Death Over Drafts</a>
+      </div>
+    </section>
+  </main>
   <footer id="contact">
     <div class="container footer-content">
       <h1>Contact Us</h1>
