--- a/blog.html
+++ b/blog.html
@@ -9,8 +9,7 @@
 <body>
   <header>
     <div class="container header-inner">
-      <a href="index.html"><div class="logo"><img src="image/download.jpg" alt="logo"></div></a>
-  
+    <a href="index.html"><div class="logo"><img src="image/0.png" alt="logo"></div></a>
       <!-- Hamburger button -->
       <div class="hamburger" id="hamburger">&#9776;</div>
   
@@ -130,7 +129,7 @@
         </li>
          <li class="blog-post">
           <h3><a href="/blogpost/blogpost-14.html">Grief Inspired Coaching in Virginia Beach</a></h3>
-          <a href="/blogpost/blogpost-14.html">   <p>atherine McNulty is a local Virginia Beach Grief Coach with her company</p></a>
+          <a href="/blogpost/blogpost-14.html">   <p>Catherine McNulty is a local Virginia Beach Grief Coach with her company</p></a>
           
        
         </li>
