--- a/blogpost/blogpost-5.html
+++ b/blogpost/blogpost-5.html
@@ -9,7 +9,7 @@
 <body>
   <header>
     <div class="container header-inner">
-      <a href="index.html"><div class="logo"><img src="../image/download.jpg" alt="logo"></div></a>
+         <a href="../index.html"><div class="logo"><img src="../image/0.png" alt="logo"></div></a>
   
       <!-- Hamburger button -->
       <div class="hamburger" id="hamburger">&#9776;</div>
