--- a/index.html
+++ b/index.html
@@ -50,30 +50,30 @@
     
       <section id="services" class="services" style="background-color: teal; color: white" >
         <div class="container">
-          <h1 class="learn">Learn more about our services and how we may be able to assist you or a loved one. </h1>
+          <h1 class="learn" style="color: gold;">Learn more about our services and how we may be able to assist you or a loved one. </h1>
           <div class="service-cards">
             <div class="card">
-              <a href="safety.html"><img src="image/safety.jpg"></a>
+              <a href="safety.html"><img src="image/homesafety.png"></a>
               <a href="safety.html"><h3>Senior Home Safety Evaluations</h3></a>
               <p>Comprehensive assessments to ensure a safe living environment for seniors.</p>
             </div>
             <div class="card">
-              <a href="end.html"><img src="image/life.jpg"></a>
+              <a href="end.html"><img src="image/education.png"></a>
               <a href="end.html"> <h3>End-of-Life Planning</h3> </a>
               <p>Personalized planning to honor end-of-life wishes and ease the burden on families.</p>
             </div>
             <div class="card">
-              <a href="swedish.html"><img src="image/swedish.jpg"></a>
+              <a href="swedish.html"><img src="image/circle.png"></a>
               <a href="swedish.html"> <h3>Swedish Death Cleaning</h3></a>
               <p>Assistance in decluttering and organizing belongings to simplify life transitions.</p>
             </div>
             <div class="card">
-              <a href="doula.html"><img src="image/death.jpg"></a>
+              <a href="doula.html"><img src="image/deathbirf.png"></a>
               <a href="doula.html"> <h3>Death Doula Care</h3></a>
               <p>Emotional and practical support during the end-of-life journey.</p>
             </div>
             <div class="card">
-              <a href="check.html"><img src="image/life.jpg"></a>
+              <a href="check.html"><img src="image/heart.png"></a>
               <a href="check.html"><h3>Lifestyle Check-Ins</h3></a>
               <p>Emotional and practical support during the end-of-life journey.</p>
             </div>
@@ -112,7 +112,7 @@
     
       <footer id="contact">
         <div class="container footer-content">
-          <h1>Contact Us</h1>
+          <h1  style="color: gold;">Contact Us</h1>
           <p>Service Locations: Virginia Beach, Norfolk, Chesapeake, and Virtual Visits</p>
           <p>Phone: <a href="tel:7573237888">757-323-7888</a></p>
           <p>Email: <a href="mailto:dawnofaging@gmail.com">dawnofaging@gmail.com</a></p>
