--- a/resources.html
+++ b/resources.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
-  <title>Resources</title>
+  <title>Document</title>
 </head>
 <body>
   <header>
@@ -87,7 +87,7 @@
   </main>
   <footer id="contact">
     <div class="container footer-content">
-      <h1>Contact Us</h1>
+<h1  style="color: gold;">Contact Us</h1>
       <p>Service Locations: Virginia Beach, Norfolk, Chesapeake, and Virtual Visits</p>
       <p>Phone: <a href="tel:7573237888">757-323-7888</a></p>
       <p>Email: <a href="mailto:dawnofaging@gmail.com">dawnofaging@gmail.com</a></p>
