--- a/thank-you.html
+++ b/thank-you.html
@@ -35,9 +35,14 @@
       </nav>
     </div>
   </header>
-  <div class="button-container">
-    <button class="teal-button"><a href="https://forms.zohopublic.com/support1163/form/DawnofAgingInformationRequest/formperma/D4-2cGM1lmihkCZSbVfU5qZVRuLqoVQ5WPP6RnZMvi8" target="_blank">Click here to schedule an appointment today! </a></button>
+  
+<section id="thank-you-section">
+  <div class="thank-you-wrapper">
+    <h1 class="thank-you-title">Thank You!</h1>
+    <p class="thank-you-text">Your request has been received. We’ll be in touch soon.</p>
+    <a href="https://dawnofaging.com" class="return-home-link">Return to Homepage</a>
   </div>
+</section>
   <button style="justify-content: center;"></button>
   <footer id="contact">
     <div class="container footer-content">
