--- a/doula.html
+++ b/doula.html
@@ -36,7 +36,7 @@
   </header>
   <section class="doula-terminal-header">
     <div class="container">
-      <h1 style="color: black;">“Death Doula Care”<br><small>(Terminally Advanced)</small></h1>
+      <h1  style=" background-color: teal; color: black;">“Death Doula Care”<br><small>(Terminally Advanced)</small></h1>
       <a href="https://forms.zohopublic.com/support1163/form/DawnofAgingInformationRequest/formperma/D4-2cGM1lmihkCZSbVfU5qZVRuLqoVQ5WPP6RnZMvi8" 
          class="cta-button" target="_blank">
          Schedule A Call
@@ -105,7 +105,7 @@
   </section>
   <footer id="contact">
     <div class="container footer-content">
-      <h1>Contact Us</h1>
+     <h1  style="color: gold;">Contact Us</h1>
       <p>Service Locations: Virginia Beach, Norfolk, Chesapeake, and Virtual Visits</p>
       <p>Phone: <a href="tel:7573237888">757-323-7888</a></p>
       <p>Email: <a href="mailto:dawnofaging@gmail.com">dawnofaging@gmail.com</a></p>
