--- a/end.html
+++ b/end.html
@@ -84,7 +84,7 @@
   </section>
   <footer id="contact">
     <div class="container footer-content">
-      <h1>Contact Us</h1>
+<h1  style="color: gold;">Contact Us</h1>
       <p>Service Locations: VVirginia Beach, Norfolk, Chesapeake, and Virtual Visits</p>
       <p>Phone: <a href="tel:7573237888">757-323-7888</a></p>
       <p>Email: <a href="mailto:dawnofaging@gmail.com">dawnofaging@gmail.com</a></p>
