--- a/form.html
+++ b/form.html
@@ -4,10 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
-  <title>Schedule</title>
+  <title>Form</title>
 </head>
 <body>
-  <header>
+<header>
     <div class="container header-inner">
       <a href="index.html"><div class="logo"><img src="image/0.png" alt="logo"></div></a>
   
@@ -35,9 +35,35 @@
       </nav>
     </div>
   </header>
-  <div class="button-container">
-    <button class="teal-button"><a href="https://forms.zohopublic.com/support1163/form/DawnofAgingInformationRequest/formperma/D4-2cGM1lmihkCZSbVfU5qZVRuLqoVQ5WPP6RnZMvi8" target="_blank">Click here to schedule an appointment today! </a></button>
+ <section id="info-request-form">
+  <div class="info-form-wrapper">
+    <h2 class="info-form-title">Request Information</h2>
+    <form class="info-form" action="https://formsubmit.co/dawnofaging@gmail.com" method="POST">
+  <!-- Hidden settings -->
+  <input type="hidden" name="_captcha" value="false">
+  <input type="hidden" name="_next" value="thank-you.html">
+
+  <label for="full-name">Full Name</label>
+  <input type="text" id="full-name" name="name" required>
+
+  <label for="email-address">Email Address</label>
+  <input type="email" id="email-address" name="email" required>
+
+  <label for="phone-number">Phone Number</label>
+  <input type="tel" id="phone-number" name="phone">
+
+  <label for="form-subject">Subject</label>
+  <input type="text" id="form-subject" name="subject">
+
+  <label for="form-message">Your Message</label>
+  <textarea id="form-message" name="message" rows="6" required></textarea>
+
+  <button type="submit" class="info-submit-button">Submit Request</button>
+</form>
   </div>
+</section>
+</section>
+
   <button style="justify-content: center;"></button>
   <footer id="contact">
     <div class="container footer-content">
@@ -57,5 +83,8 @@
     </div>
   </footer>
   <script src="main.js"></script>
+
+
+ 
 </body>
 </html>
