--- a/schedule.html
+++ b/schedule.html
@@ -36,7 +36,7 @@
     </div>
   </header>
   <div class="button-container">
-    <button class="teal-button"><a href="https://forms.zohopublic.com/support1163/form/DawnofAgingInformationRequest/formperma/D4-2cGM1lmihkCZSbVfU5qZVRuLqoVQ5WPP6RnZMvi8" target="_blank">Click here to schedule an appointment today! </a></button>
+ <button class="teal-button"><a href="form.html">Click here to schedule an appointment today! </a></button>
   </div>
   <button style="justify-content: center;"></button>
   <footer id="contact">
