--- a/check.html
+++ b/check.html
@@ -21,7 +21,7 @@
           <li><a href="testimonials.html">Testimonials</a></li>
           <li><a href="blog.html">Blog</a></li>
           <li><a href="resources.html">Resources</a></li>
-          <li><a href="schedule.html">Contact</a></li>
+         <li ><a href="form.html">Contact</a></li>
 
         </ul>
   
