--- a/form.html
+++ b/form.html
@@ -36,33 +36,34 @@
     </div>
   </header>
  <section id="info-request-form">
-  <div class="info-form-wrapper">
+   <div class="info-form-wrapper">
     <h2 class="info-form-title">Request Information</h2>
+    
     <form class="info-form" action="https://formsubmit.co/dawnofaging@gmail.com" method="POST">
-  <!-- Hidden settings -->
-  <input type="hidden" name="_captcha" value="false">
-  <input type="hidden" name="_next" value="thank-you.html">
+      <!-- Hidden settings -->
+      <input type="hidden" name="_captcha" value="false">
+      <input type="hidden" name="_next" value="https://dawnofaging.com/thank-you.html">
 
-  <label for="full-name">Full Name</label>
-  <input type="text" id="full-name" name="name" required>
+      <label for="full-name">Full Name</label>
+      <input type="text" id="full-name" name="name" required>
 
-  <label for="email-address">Email Address</label>
-  <input type="email" id="email-address" name="email" required>
+      <label for="email-address">Email Address</label>
+      <input type="email" id="email-address" name="email" required>
 
-  <label for="phone-number">Phone Number</label>
-  <input type="tel" id="phone-number" name="phone">
+      <label for="phone-number">Phone Number</label>
+      <input type="tel" id="phone-number" name="phone">
 
-  <label for="form-subject">Subject</label>
-  <input type="text" id="form-subject" name="subject">
+      <label for="form-subject">Subject</label>
+      <input type="text" id="form-subject" name="subject">
 
-  <label for="form-message">Your Message</label>
-  <textarea id="form-message" name="message" rows="6" required></textarea>
+      <label for="form-message">Your Message</label>
+      <textarea id="form-message" name="message" rows="6" required></textarea>
 
-  <button type="submit" class="info-submit-button">Submit Request</button>
-</form>
+      <button type="submit" class="info-submit-button">Submit Request</button>
+    </form>
   </div>
 </section>
-</section>
+
 
   <button style="justify-content: center;"></button>
   <footer id="contact">
