--- a/resources.html
+++ b/resources.html
@@ -22,7 +22,7 @@
           <li><a href="testimonials.html">Testimonials</a></li>
           <li><a href="blog.html">Blog</a></li>
         
-          <li><a href="schedule.html">Contact</a></li>
+      <li ><a href="form.html">Contact</a></li>
 
   
 <div class="social-icons">
