--- a/schedule.html
+++ b/schedule.html
@@ -22,7 +22,7 @@
           <li><a href="index.html">Home</a></li>        
           <li><a href="testimonials.html">Testimonials</a></li>
           <li><a href="blog.html">Blog</a></li>
-          <li><a href="resources.html">Resources</a></li>
+         <li ><a href="form.html">Contact</a></li>
         
 
   
@@ -36,7 +36,7 @@
     </div>
   </header>
   <div class="button-container">
- <button class="teal-button"><a href="form.html">Click here to schedule an appointment today! </a></button>
+    <button class="teal-button"><a href="form.html">Click here to schedule an appointment today! </a></button>
   </div>
   <button style="justify-content: center;"></button>
   <footer id="contact">
