--- a/swedish.html
+++ b/swedish.html
@@ -21,7 +21,7 @@
           <li><a href="testimonials.html">Testimonials</a></li>
           <li><a href="blog.html">Blog</a></li>
           <li><a href="resources.html">Resources</a></li>
-          <li><a href="schedule.html">Contact</a></li>
+          <li ><a href="form.html">Contact</a></li>
 
           <div class="social-icons">
             <a href="https://www.facebook.com/people/Dawn-of-Aging/61555398243833/" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/5/51/Facebook_f_logo_%282019%29.svg" alt="Facebook" /></a>
