--- a/thank-you.html
+++ b/thank-you.html
@@ -36,14 +36,13 @@
     </div>
   </header>
   
-<section id="thank-you-section">
-  <div class="thank-you-wrapper">
-    <h1 class="thank-you-title">Thank You!</h1>
-    <p class="thank-you-text">Your request has been received. We’ll be in touch soon.</p>
-    <a href="https://dawnofaging.com" class="return-home-link">Return to Homepage</a>
-  </div>
-</section>
-  <button style="justify-content: center;"></button>
+ <section id="thank-you-section">
+    <div class="thank-you-wrapper">
+      <h1 class="thank-you-title">Thank You!</h1>
+      <p class="thank-you-text">Your request has been received. We’ll be in touch soon.</p>
+      <a href="https://dawnofaging.com" class="return-home-link">Return to Homepage</a>
+    </div>
+  </section>tyle="justify-content: center;"></button>
   <footer id="contact">
     <div class="container footer-content">
 <h1  style="color: gold;">Contact Us</h1>
