--- a/check.html
+++ b/check.html
@@ -37,7 +37,7 @@
   <section class="lifestyle-checkin-header">
     <div class="container">
       <h1>Lifestyle Check-Ins</h1>
-      <a href="https://forms.zohopublic.com/support1163/form/DawnofAgingInformationRequest/formperma/D4-2cGM1lmihkCZSbVfU5qZVRuLqoVQ5WPP6RnZMvi8" 
+      <a href="form.html" 
          class="cta-button" target="_blank">
          Schedule A Call
       </a>
