--- a/end.html
+++ b/end.html
@@ -37,7 +37,7 @@
   <section class="doula-education-header">
     <div class="container">
       <h1>End-of-Life Education<br><small>(Planning and Preparation)</small></h1>
-      <a href="https://forms.zohopublic.com/support1163/form/DawnofAgingInformationRequest/formperma/D4-2cGM1lmihkCZSbVfU5qZVRuLqoVQ5WPP6RnZMvi8" 
+      <a href="form.html" 
          class="cta-button" target="_blank">
          Schedule A Call
       </a>
@@ -49,10 +49,7 @@
       <!-- Two Column Layout -->
       <div class="doula-content">
         <!-- Left: Location -->
-        <div class="doula-location">
-         
-        </div>
-  
+      
         <!-- Right: Service Description -->
         <div class="doula-text">
           <p><strong>Using a Death Doula</strong> doesn't have to be just for the last moments of one's life. We can bring empowerment and peace of mind—encouraging you to take control of your life and have a voice in preparing for the end-of-life journey long before a terminal diagnosis.</p>
