--- a/safety.html
+++ b/safety.html
@@ -36,7 +36,7 @@
   </header>
   <div class="home-safety-header">
     <h1 style="color: black;">Senior Home Safety Evaluations</h1>
-    <a href="https://forms.zohopublic.com/support1163/form/DawnofAgingInformationRequest/formperma/D4-2cGM1lmihkCZSbVfU5qZVRuLqoVQ5WPP6RnZMvi8" 
+    <a href="form.html" 
        class="cta-button" 
        target="_blank">
       Schedule A Call
