--- a/swedish.html
+++ b/swedish.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
-  <title>Document</title>
+  <title>Swedish Death Cleaning</title>
 </head>
 <body>
   <header>
@@ -35,7 +35,7 @@
   <section class="swedish-cleaning-header">
     <div class="container">
       <h1>Swedish Death Cleaning Coach</h1>
-      <a href="https://forms.zohopublic.com/support1163/form/DawnofAgingInformationRequest/formperma/D4-2cGM1lmihkCZSbVfU5qZVRuLqoVQ5WPP6RnZMvi8" 
+      <a href="form.html" 
          class="cta-button" target="_blank">
          Schedule A Call
       </a>
@@ -43,12 +43,7 @@
   </section>
   
   <section class="swedish-cleaning-section">
-    <div class="container swedish-cleaning-content">
-  
-      <!-- Left Column: Locations -->
-      <div class="cleaning-location">
-      
-      </div>
+   
   
       <!-- Right Column: Service Details -->
       <div class="cleaning-text">
