--- a/safety.html
+++ b/safety.html
@@ -76,7 +76,7 @@
       <p>Ready to enhance the safety of your home? Contact us today to schedule your comprehensive home safety evaluation.</p>
       <p><strong>Phone:</strong> (757) 323-7888</p>
       <p><strong>Service Areas:</strong> Virginia Beach, Norfolk, Chesapeake</p>
-      <a href="form.html"  class="cta-button">Schedule A Call</a>
+      <a href="https://forms.zohopublic.com/support1163/form/DawnofAgingInformationRequest/formperma/D4-2cGM1lmihkCZSbVfU5qZVRuLqoVQ5WPP6RnZMvi8" target="_blank" class="cta-button">Schedule A Call</a>
     </div>
   </section>
 
