--- a/blogpost/blogpost-15.html
+++ b/blogpost/blogpost-15.html
@@ -39,7 +39,7 @@
 
   <h2>When Memories Matter Most</h2>
   <p>As you or someone you love approaches the end of life, memories take on new meaning. Old photographs become sacred—tangible pieces of a life filled with love, laughter, and legacy. But often, those memories are tucked away in boxes, scattered across devices, or difficult to access when you need them most.</p>
-  <p>That’s where Good Life Photo Solutions, and their founder Andi Willis, can help. Andi and her team work with families to organize, preserve, and celebrate a lifetime of memories. Whether you’re preparing a tribute, sorting through generations of photos, or simply want to ensure your story is remembered and shared, they offer gentle, compassionate photo organizing services designed for moments like these.</p>
+  <p>That’s where <a href="https://goodlifephotosolutions.com/" target="_blank">Life Photo Solutions</a> , and their founder Andi Willis, can help. Andi and her team work with families to organize, preserve, and celebrate a lifetime of memories. Whether you’re preparing a tribute, sorting through generations of photos, or simply want to ensure your story is remembered and shared, they offer gentle, compassionate <a href="https://goodlifephotosolutions.com/" target="_blank">photo organizing services</a>  designed for moments like these.</p>
 
   <h2>Meet Andi Willis</h2>
   <p>For over 15 years, Andi has worked with clients across the country to turn chaotic boxes of prints, digital clutter, and inherited photo archives into beautifully organized, easily accessible collections.</p>
@@ -70,13 +70,20 @@
     </p>
     <p class="location">Serving Hampton Roads, Richmond, Southeastern VA, and beyond!</p>
 
-    <div class="social-icons">
-      <a href="https://www.facebook.com/GoodLifePhotoSolutions/" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/5/51/Facebook_f_logo_%282019%29.svg" alt="Facebook" /></a>
-            <a href="https://www.instagram.com/goodlifephotosolutions/" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram" /></a>
-            <a href="https://www.linkedin.com/in/andiwillis/" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/c/ca/LinkedIn_logo_initials.png" alt="LinkedIn" /></a>
-            <a href="https://www.pinterest.com/goodlifephotosolutions/" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/0/08/Pinterest-logo.png" alt="Pinterest" />
-</a>
-    </div>
+    <div class="centered-social-icons">
+  <a href="https://www.facebook.com/GoodLifePhotoSolutions/" target="_blank">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/5/51/Facebook_f_logo_%282019%29.svg" alt="Facebook" />
+  </a>
+  <a href="https://www.instagram.com/goodlifephotosolutions/" target="_blank">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram" />
+  </a>
+  <a href="https://www.linkedin.com/in/andiwillis/" target="_blank">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/c/ca/LinkedIn_logo_initials.png" alt="LinkedIn" />
+  </a>
+  <a href="https://www.pinterest.com/goodlifephotosolutions/" target="_blank">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/0/08/Pinterest-logo.png" alt="Pinterest" />
+  </a>
+</div>
 
     <a href="https://goodlife.17hats.com/p#/scheduling/tpwcwtprrtdrzskzhgvhprrkzwchxxsn/s/12739" class="cta-button">Schedule your complimentary 15 minute chat</a>
   </div>
