--- a/swedish.html
+++ b/swedish.html
@@ -52,52 +52,34 @@
           <span>– Rumi</span>
         </blockquote>
   
-        <p><strong>Swedish Death Cleaning</strong> is a critical component of living purposefully, letting go of clutter, and evaluating the significance of the items in our homes. It’s about improving quality of life by learning to release things that no longer serve us.</p>
+        <p><strong>Swedish Death Cleaning "Döstädning"</strong> is a critical component of living purposefully, letting go of clutter, and evaluating the significance of the items in our homes. It’s about improving quality of life by learning to release things that no longer serve us.</p>
   
-        <p>We help people at any age shift toward a simpler lifestyle, surrounded only by meaningful possessions, and to become more comfortable with “letting go.” Reflecting on mortality can inspire gratitude, build stronger relationships, and create lasting memories.</p>
+        <p>We help people at any age shift toward a simpler lifestyle, surrounded only by meaningful possessions with purpose, and to become more comfortable with “letting go.” Reflecting on mortality can inspire gratitude, build stronger relationships, and create lasting memories.</p>
   
         <h2>What This Is Not</h2>
         <p>This is not a cleaning service or moving company. This is coaching and hands-on support, working interactively with you to thoughtfully declutter and take ownership of your legacy.</p>
   
         <h2>Who It’s For</h2>
         <ul>
-          <li>Anyone overwhelmed after a loved one’s passing</li>
-          <li>Those preparing to downsize from a family home</li>
-          <li>People seeking to simplify and declutter with purpose</li>
-          <li>Individuals wanting to delegate possessions meaningfully</li>
+          <li>Anyone overwhelmed after a loved one’s passing in need of end-of-life organizing</li>
+          <li>Those preparing for senior downsizing from a family home</li>
+          <li>People seeking minimalization to simplify and declutter with purpose </li>
+          <li>Individuals wanting to delegate possessions meaningfully to loved ones or local Virginia Beach, Norfolk or Chesapeake communities</li>
         </ul>
   
         <h2>Service Benefits</h2>
         <ul>
           <li>Emotional, mental, and physical well-being</li>
           <li>Practical tips for goal-setting and new habits</li>
-          <li>Support with legacy projects like letters, memory books, or gifts</li>
-          <li>Preventing post-death chaos for loved ones</li>
+          <li>Support with end-of-life preparation in legacy projects like letters, memory books, or gifts</li>
+          <li>Preventing post-death chaos for loved ones with organization and purpose-filled decluttering</li>
         </ul>
   
-        <h2>Service Packages</h2>
+        
   
-        <h3>A la Carte</h3>
-        <p>• One-hour online video session — <strong>$125</strong></p>
+        
   
-        <h3>Package One – Small Projects</h3>
-        <ul>
-          <li>Online: 1 session — <strong>$125</strong></li>
-          <li>Online + 4 hours in-person — <strong>$450</strong></li>
-        </ul>
-  
-        <h3>Package Two – Medium Projects</h3>
-        <ul>
-          <li>4 weekly one-hour sessions: Assessment, Plan, Check-In, Follow-Up — <strong>$525</strong></li>
-          <li>Same + 4 hours in-person (VA Beach / Norfolk / Chesapeake) — <strong>$975</strong></li>
-        </ul>
-  
-        <h3>Package Three – Larger Projects</h3>
-        <ul>
-          <li>Online project assessment — <strong>$125</strong></li>
-          <li>Full day (8 hours w/ break) — <strong>$1050</strong></li>
-          <li>Additional 4-hour day — <strong>$525</strong></li>
-          <li>Additional 8-hour day — <strong>$950</strong></li>
+
           <li>Custom packages available based on scope</li>
         </ul>
   
