--- a/check.html
+++ b/check.html
@@ -60,7 +60,7 @@
   
         <p>This non-medical concierge service begins with an in-depth consultation and overview to understand support needed in the client's home life, family dynamics, lifestyle, social circle, current medical concerns, and goals. This helps establish an individually tailored care plan, which can be reviewed regularly to adapt to any changing needs.</p>
   
-        <p>Recognizing that a simple weekly check-in may not suffice for those needing more inclusive support to safely remain at home, a more comprehensive plan may be tailored to the client and family's needs. Concierge care can be provided in private homes as well as nursing facilities, rehabilitation units, and hospice care in coordination with staff at those facilities.</p>
+        <p>Recognizing that a simple weekly check-in may not suffice for those needing more inclusive support to safely remain at home, a more comprehensive plan may be tailored to the client and family's needs. Concierge "check-in" home care of seniors or adults with chronic illnesses or injuries can be provided in private homes as well as nursing facilities, rehabilitation units, and hospice care in coordination with staff at those facilities.</p>
   
         <p>Using a more holistic approach that addresses physical, mental, emotional, and spiritual needs through locally vetted referrals, we offer supportive assistance that prioritizes client-centered care. We focus on individual needs, wishes, and goals to enhance quality of life for clients and their families.</p>
   
