--- a/doula.html
+++ b/doula.html
@@ -65,10 +65,10 @@
         </blockquote>
   
         <h2>How can a Doula help you?</h2>
-        <p>End-of-life doula care is supportive, non-medical care provided at home, in hospitals, or hospice facilities. Care can begin well before the final stage of life, with the goal of enhancing presence, peace of mind, and quality of life for both you and your family — while always respecting your autonomy.</p>
+        <p>End-of-life doula care is supportive, non-medical care provided to those diagnosed with a terminal illness, at home, in hospitals, or hospice facilities. Care can begin well before the final stage of life, with the goal of enhancing presence, peace of mind, and quality of life for both you and your family — while always respecting your autonomy.</p>
   
         <h3>Advocacy</h3>
-        <p>Doulas advocate for your wishes and help bridge communication between you, your family, and your medical team to ensure your voice remains central in all decisions.</p>
+        <p>Death Doulas advocate for your wishes and help bridge communication between you, your family, and your medical team to ensure your voice remains central in all decisions.</p>
   
         <h3>Holistic-Based Care</h3>
         <p>Our approach considers emotional, psychological, and spiritual well-being alongside physical support. We work in harmony with hospice and palliative care providers.</p>
@@ -84,9 +84,9 @@
   
         <h2>Rates</h2>
         <ul>
-          <li><strong>Hourly (2-hour minimum):</strong> $80</li>
+          <li><strong>Warm Welcome Clarity Call</strong> $70 (1 hour)</li>
           <li>Overnights and on-call support available</li>
-          <li>Comprehensive packages customized to individual needs</li>
+          <li>Comprehensive packages available for all levels of support and customized to individual needs</li>
         </ul>
   
         <h2>Services Do NOT Include:</h2>
