--- a/about.html
+++ b/about.html
@@ -26,10 +26,10 @@
         
   
         <div class="social-icons">
-          <a href="https://www.facebook.com/people/Dawn-of-Aging/61555398243833/" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/5/51/Facebook_f_logo_%282019%29.svg" alt="Facebook" /></a>
-          <a href="https://www.instagram.com/dawnofaging/" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram" /></a>
-          <a href="#" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/c/ca/LinkedIn_logo_initials.png" alt="LinkedIn" /></a>
-          <a href="https://safespacealliance.com/" target="_blank"><img src="/image/Safe-Space-Alliance-Advocate-icon.webp" alt="Heart" /></a>
+         <a href="https://www.facebook.com/people/Dawn-of-Aging/61555398243833/" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/5/51/Facebook_f_logo_%282019%29.svg" alt="Facebook" /></a>
+            <a href="https://www.instagram.com/dawnofaging/" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram" /></a>
+            <a href="https://www.linkedin.com/in/jessica-sadler-eold-cpo-7bb541165/" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/c/ca/LinkedIn_logo_initials.png" alt="LinkedIn" /></a>
+            <a href="https://safespacealliance.com/" target="_blank"><img src="/image/Safe-Space-Alliance-Advocate-icon.webp" alt="Heart" /></a>
         </div>
       </nav>
     </div>
@@ -75,10 +75,10 @@
       <p>Phone: <a href="tel:7573237888">757-323-7888</a></p>
       <p>Email: <a href="mailto:dawnofaging@gmail.com">dawnofaging@gmail.com</a></p>
       <div class="social-icons" style="justify-content: center;">
-        <a href="https://www.facebook.com/people/Dawn-of-Aging/61555398243833/" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/5/51/Facebook_f_logo_%282019%29.svg" alt="Facebook" /></a>
-          <a href="https://www.instagram.com/dawnofaging/" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram" /></a>
-          <a href="#" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/c/ca/LinkedIn_logo_initials.png" alt="LinkedIn" /></a>
-          <a href="https://safespacealliance.com/" target="_blank"><img src="/image/Safe-Space-Alliance-Advocate-icon.webp" alt="Heart" /></a>
+         <a href="https://www.facebook.com/people/Dawn-of-Aging/61555398243833/" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/5/51/Facebook_f_logo_%282019%29.svg" alt="Facebook" /></a>
+            <a href="https://www.instagram.com/dawnofaging/" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram" /></a>
+            <a href="https://www.linkedin.com/in/jessica-sadler-eold-cpo-7bb541165/" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/c/ca/LinkedIn_logo_initials.png" alt="LinkedIn" /></a>
+            <a href="https://safespacealliance.com/" target="_blank"><img src="/image/Safe-Space-Alliance-Advocate-icon.webp" alt="Heart" /></a>
       </div>
       <p>&copy; 2024 Dawn of Aging</p>
       <a href="https://shawnsportfoliosite.netlify.app/" target="_blank">The author of the site</a>
