--- a/swedish.html
+++ b/swedish.html
@@ -26,7 +26,7 @@
           <div class="social-icons">
             <a href="https://www.facebook.com/people/Dawn-of-Aging/61555398243833/" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/5/51/Facebook_f_logo_%282019%29.svg" alt="Facebook" /></a>
             <a href="https://www.instagram.com/dawnofaging/" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram" /></a>
-            <a href="#" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/c/ca/LinkedIn_logo_initials.png" alt="LinkedIn" /></a>
+            <a href="https://www.linkedin.com/in/jessica-sadler-eold-cpo-7bb541165/" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/c/ca/LinkedIn_logo_initials.png" alt="LinkedIn" /></a>
             <a href="https://safespacealliance.com/" target="_blank"><img src="/image/Safe-Space-Alliance-Advocate-icon.webp" alt="Heart" /></a>
           </div>
       </nav>
@@ -81,6 +81,14 @@
   
 
           <li>Custom packages available based on scope</li>
+
+<div class="pdf-links">
+            <a href="/files/White Luxury Real Estate Open House Flyer.zip - 1.png" target="_blank" rel="noopener noreferrer">
+  View Packages
+</a><a href="/files/White Luxury Real Estate Open House Flyer.zip - 2 (1).png" target="_blank" rel="noopener noreferrer">
+  View Packages
+</a>
+</div>
         </ul>
   
         <h2>Important Note</h2>
@@ -99,9 +107,9 @@
       <p>Email: <a href="mailto:dawnofaging@gmail.com">dawnofaging@gmail.com</a></p>
       <div class="social-icons" style="justify-content: center;">
         <a href="https://www.facebook.com/people/Dawn-of-Aging/61555398243833/" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/5/51/Facebook_f_logo_%282019%29.svg" alt="Facebook" /></a>
-          <a href="https://www.instagram.com/dawnofaging/" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram" /></a>
-          <a href="#" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/c/ca/LinkedIn_logo_initials.png" alt="LinkedIn" /></a>
-          <a href="https://safespacealliance.com/" target="_blank"><img src="/image/Safe-Space-Alliance-Advocate-icon.webp" alt="Heart" /></a>
+            <a href="https://www.instagram.com/dawnofaging/" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram" /></a>
+            <a href="https://www.linkedin.com/in/jessica-sadler-eold-cpo-7bb541165/" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/c/ca/LinkedIn_logo_initials.png" alt="LinkedIn" /></a>
+            <a href="https://safespacealliance.com/" target="_blank"><img src="/image/Safe-Space-Alliance-Advocate-icon.webp" alt="Heart" /></a>
       </div>
 
       <p>&copy; 2024 Dawn of Aging</p>
