--- a/about.html
+++ b/about.html
@@ -44,7 +44,8 @@
         <div class="founder-bio">
           <h3>Jessica Dawn Sadler, CPO, EOLD</h3>
           <ul class="founder-credentials">
-            <li>Death Doula Certificate – International Association of Professions Career College</li>
+            <li>Death Doula Certificate – International Association of Professions Career College
+          </li>LifeSpan Doula Association Training
             <li>American Board Certified Prosthetist Orthotist</li>
             <li>Senior Home Safety Specialist®</li>
             <li>Commonwealth of Virginia Notary Public</li>
