--- a/about.html
+++ b/about.html
@@ -16,11 +16,12 @@
       <!-- Nav including Social Media -->
       <nav id="nav-menu">
         <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="testimonials.html">Testimonials</a></li>
-          <li><a href="blog.html">Blog</a></li>
-          <li><a href="resources.html">Resources</a></li>
-          <li ><a href="form.html">Contact</a></li>
+            <li><a href="about.html">About</a></li>
+              <li><a href="testimonials.html">Testimonials</a></li>
+              <li><a href="blog.html">Blog</a></li>
+              <li><a href="resources.html">Resources</a></li>
+             <li ><a href="form.html">Contact</a></li>
+             <li><a href="https://calendly.com/dawnofaging" target="_blank">Schedule a Time!</a></li>
         </ul>
 
         
@@ -44,8 +45,7 @@
         <div class="founder-bio">
           <h3>Jessica Dawn Sadler, CPO, EOLD</h3>
           <ul class="founder-credentials">
-            <li>Death Doula Certificate – International Association of Professions Career College
-          </li>LifeSpan Doula Association Training
+            <li>Death Doula Certificate – International Association of Professions Career College</li>
             <li>American Board Certified Prosthetist Orthotist</li>
             <li>Senior Home Safety Specialist®</li>
             <li>Commonwealth of Virginia Notary Public</li>
