--- a/blogpost/blogpost-2.html
+++ b/blogpost/blogpost-2.html
@@ -22,6 +22,7 @@
           <li><a href="../blog.html">Blog</a></li>
           <li><a href="../resources.html">Resources</a></li>
           <li><a href="../form.html">Contact</a></li>
+           <li><a href="https://calendly.com/dawnofaging" target="_blank">Schedule a Time!</a></li>
 
   
           <div class="social-icons">
