--- a/end.html
+++ b/end.html
@@ -16,12 +16,12 @@
       <!-- Nav including Social Media -->
       <nav id="nav-menu">
         <ul>
-          <li><a href="about.html">About</a></li>
-          <li><a href="index.html">Home</a></li>        
-          <li><a href="testimonials.html">Testimonials</a></li>
-          <li><a href="blog.html">Blog</a></li>
-          <li><a href="resources.html">Resources</a></li>
-          <li ><a href="form.html">Contact</a></li>
+         <li><a href="about.html">About</a></li>
+              <li><a href="testimonials.html">Testimonials</a></li>
+              <li><a href="blog.html">Blog</a></li>
+              <li><a href="resources.html">Resources</a></li>
+             <li ><a href="form.html">Contact</a></li>
+             <li><a href="https://calendly.com/dawnofaging" target="_blank">Schedule a Time!</a></li>
 
         </ul>
   
