--- a/blogpost/blogpost-15.html
+++ b/blogpost/blogpost-15.html
@@ -17,13 +17,13 @@
       <!-- Nav including Social Media -->
       <nav id="nav-menu">
         <ul>
-          <li><a href="../about.html">About</a></li>
+        <li><a href="../about.html">About</a></li>
           <li><a href="../index.html">Home</a></li>        
           <li><a href="../testimonials.html">Testimonials</a></li>
           <li><a href="../blog.html">Blog</a></li>
           <li><a href="../resources.html">Resources</a></li>
-           <li><a href="../form.html">Contact</a></li>
-
+          <li><a href="../form.html">Contact</a></li>
+           <li><a href="https://calendly.com/dawnofaging" target="_blank">Schedule a Time!</a></li>
   
           <div class="social-icons">
            <a href="https://www.facebook.com/people/Dawn-of-Aging/61555398243833/" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/5/51/Facebook_f_logo_%282019%29.svg" alt="Facebook" /></a>
@@ -114,8 +114,8 @@
   </section>
   <footer id="contact">
     <div class="container footer-content">
-     
-      <h1  style="color: gold;">Contact Us</h1
+      div class="container footer-content">
+      <h1>Contact Us</h1>
           <p>Service Locations: Virginia Beach, Norfolk, Chesapeake, and Virtual Visits</p>
           <p>Phone: <a href="tel:7573237888">757-323-7888</a></p>
           <p>Email: <a href="mailto:dawnofaging@gmail.com">dawnofaging@gmail.com</a></p>
