--- a/about.html
+++ b/about.html
@@ -46,6 +46,7 @@
           <h3>Jessica Dawn Sadler, CPO, EOLD</h3>
           <ul class="founder-credentials">
             <li>Death Doula Certificate – International Association of Professions Career College</li>
+            <li>Reiki Practioner</li>
             <li>American Board Certified Prosthetist Orthotist</li>
             <li>Commonwealth of Virginia Notary Public</li>
             <li>Certificate of Completion: SOUL SPEAK – The Language of Your Body</li>
