--- a/death-new.html
+++ b/death-new.html
@@ -40,11 +40,12 @@
     <!-- Accordion 1 -->
     <div class="accordion">
       <div class="accordion-header">
-        Don't Wait Until It's Too Late!
+         Advance Care Planning Facilitator
         <span class="arrow">▶</span>
       </div>
       <div class="accordion-content">
-        <p>Using a Death Doula doesn't have to be just for the last moments of one's life. We bring empowerment and peace of mind — encouraging you to take control of your life and have a voice in preparing for the end-of-life journey long before a terminal diagnosis.</p>
+        <p>n Healthcare Proxy Facilitator.
+</p>Create empowerment and peace of mind with your own voice in preparing for the end-of-life journey long before it is needed.
       </div>
     </div>
 
@@ -56,33 +57,35 @@
       </div>
       <div class="accordion-content">
         <ul>
-          <li>Advance directives</li>
-          <li>Disposition plans</li>
-          <li>Memorial service preferences</li>
-          <li>Referrals on legal topics (wills, POA, healthcare directives)</li>
-        </ul>
+          <li>Referrals to specialists in end-of-life care such as Lawyers, Hospices, Fiancial Planners, and Funeral Directors.</li>
+          <li>Consistant advocate through stages with focus on presence and relationship to entire care circle.</li>
+          <li>Memorial service preferences/planning.</li>
+          <li>Living Funerals.</li>
+          </li>End-of-Life Binder Consultant.   </ul>
       </div>
     </div>
 
     <!-- Accordion 3 -->
     <div class="accordion">
       <div class="accordion-header">
-        Emotional and Spiritual Support
+        Reiki Practitioner Emotional and Spiritual Support
         <span class="arrow">▶</span>
       </div>
       <div class="accordion-content">
-        <p>We offer a safe and compassionate space for exploring emotions, fears, and spiritual concerns. Our goal is to ensure your journey is peaceful and meaningful in a non-judgmental setting.</p>
-      </div>
+        <p>Offer a safe and compassionate space for exploring emotions, fears, and spiritual concerns. Using non-invasice energy channeling to promote relaxation, reduce stress, and enhance overall well-being emotionally and spiritually. Reiki is not a substitute for conventional medical treatment or religious in nature.</p>
+      <li>Regret Journeys and safe Secret Spilling Space.      </div>
     </div>
 
     <!-- Accordion 4 -->
     <div class="accordion">
       <div class="accordion-header">
-        Legacy and Aftercare Support
+        Swedish Death Cleaning Coach
         <span class="arrow">▶</span>
       </div>
       <div class="accordion-content">
-        <p>Legacy planning may include memory books, letters, or digital archives. After death, we support families with aftercare, grief resources, and guidance during mourning.</p>
+        <li> Organizing of storage spaces, attics, basements, and garages to help with future downsizing.</li>
+        <li>Gift giving ceremonies or tea parties.
+          <li>Simplify one's life and posessions to make easier for loved ones after death. </ul>
       </div>
     </div>
 
@@ -127,7 +130,7 @@
       </div>
       <div class="accordion-content">
         <ul>
-          <li>Warm Welcome Clarity Call: $70 (1 hour)</li>
+          <li>Warm Welcome Clarity Call: $80 (1 hour)</li>
           <li>Overnight and on-call support available</li>
           <li>Custom packages tailored to need</li>
         </ul>
