--- a/death-new.html
+++ b/death-new.html
@@ -44,7 +44,7 @@
         <span class="arrow">▶</span>
       </div>
       <div class="accordion-content">
-        <p>n Healthcare Proxy Facilitator.
+        <p>Healthcare Proxy Facilitator.
 </p>Create empowerment and peace of mind with your own voice in preparing for the end-of-life journey long before it is needed.
       </div>
     </div>
@@ -61,7 +61,7 @@
           <li>Consistant advocate through stages with focus on presence and relationship to entire care circle.</li>
           <li>Memorial service preferences/planning.</li>
           <li>Living Funerals.</li>
-          </li>End-of-Life Binder Consultant.   </ul>
+          <li>End-of-Life Binder Consultant.</li>  </ul>
       </div>
     </div>
 
