--- a/death-new.html
+++ b/death-new.html
@@ -40,24 +40,13 @@
     <!-- Accordion 1 -->
     <div class="accordion">
       <div class="accordion-header">
-         Advance Care Planning Facilitator
-        <span class="arrow">▶</span>
-      </div>
-      <div class="accordion-content">
-        <p>Healthcare Proxy Facilitator.
-</p>Create empowerment and peace of mind with your own voice in preparing for the end-of-life journey long before it is needed.
-      </div>
-    </div>
-
-    <!-- Accordion 2 -->
-    <div class="accordion">
-      <div class="accordion-header">
         Comprehensive End-of-Life Planning
         <span class="arrow">▶</span>
       </div>
       <div class="accordion-content">
         <ul>
-          <li>Referrals to specialists in end-of-life care such as Lawyers, Hospices, Fiancial Planners, and Funeral Directors.</li>
+          <li>Advance Care Facilitator:Create empowerment and peace of mind with your own voice for end-of-life care long before it is needed.</li>
+          </li>Referrals to specialists in end-of-life care such as Lawyers, Hospices, Fiancial Planners, and Funeral Directors.</li>
           <li>Consistant advocate through stages with focus on presence and relationship to entire care circle.</li>
           <li>Memorial service preferences/planning.</li>
           <li>Living Funerals.</li>
@@ -65,7 +54,7 @@
       </div>
     </div>
 
-    <!-- Accordion 3 -->
+    <!-- Accordion 2 -->
     <div class="accordion">
       <div class="accordion-header">
         Reiki Practitioner Emotional and Spiritual Support
@@ -73,10 +62,11 @@
       </div>
       <div class="accordion-content">
         <p>Offer a safe and compassionate space for exploring emotions, fears, and spiritual concerns. Using non-invasice energy channeling to promote relaxation, reduce stress, and enhance overall well-being emotionally and spiritually. Reiki is not a substitute for conventional medical treatment or religious in nature.</p>
-      <li>Regret Journeys and safe Secret Spilling Space.      </div>
+      <li>Letting Go Lounge to Spill Secrets, Regrets and "What-ifs".</ul>
+      </div>
     </div>
 
-    <!-- Accordion 4 -->
+    <!-- Accordion 3 -->
     <div class="accordion">
       <div class="accordion-header">
         Swedish Death Cleaning Coach
@@ -84,37 +74,44 @@
       </div>
       <div class="accordion-content">
         <li> Organizing of storage spaces, attics, basements, and garages to help with future downsizing.</li>
-        <li>Gift giving ceremonies or tea parties.
-          <li>Simplify one's life and posessions to make easier for loved ones after death. </ul>
+        <li>Gift giving ceremonies or tea parties.</li>
+        <li>Simplify one's life and posessions to make easier for loved ones after death.</li>  </ul>
+      </div>
+    </div>
+
+    <!-- Accordion 4 -->
+    <div class="accordion">
+      <div class="accordion-header">
+        Vigil Sitting Services/ Respite Care
+        <span class="arrow">▶</span>
+      </div>
+      <div class="accordion-content">
+        <li>Final Hours Vigil Sitting for those and their families needing end-of-life additional NON-Medical companionship and suport.</li>
+        <li>Respecting autonomy and advocating wishes of the dying.</li>
+        <li>Bridging Communication with Family and Medical/Hospice Careteams</li>
+        <li>Offering "No One Dies Alone" services for those dying in setting with no family</li>
+        
       </div>
     </div>
 
     <!-- Accordion 5 -->
     <div class="accordion">
       <div class="accordion-header">
-        How Can a Doula Help You?
+        Death Cafe Host & Community Workshops
         <span class="arrow">▶</span>
       </div>
       <div class="accordion-content">
-        <p>End-of-life doula care is supportive, non-medical care that begins well before the final stage of life. The goal is enhancing presence, peace of mind, and quality of life for both you and your family — while always respecting your autonomy.</p>
-      </div>
-    </div>
-
-    <!-- Accordion 6 -->
-    <div class="accordion">
-      <div class="accordion-header">
-        Advocacy and Holistic-Based Care
-        <span class="arrow">▶</span>
-      </div>
-      <div class="accordion-content">
-        <p>We advocate for your wishes and bridge communication with family and medical teams. Our holistic care addresses emotional, psychological, and spiritual well-being.</p>
+        <li>Cafes held monthly or by request.</li>
+        <li>Obituary Writing and Memories.</li>
+        <li>Vinyl Farewells & Requiem Reads.</li>
+      </li>Public Speaking Presentations on End of Life Care and Planning.</ul>
       </div>
     </div>
 
     <!-- Accordion 7 -->
     <div class="accordion">
       <div class="accordion-header">
-        Planning, Rates & Exclusions
+        Packages, Rates & Exclusions
         <span class="arrow">▶</span>
       </div>
       <div class="accordion-content">
@@ -123,18 +120,7 @@
           <li>Overnight and on-call support available</li>
           <li>Custom packages tailored to need</li>
         </ul>
-        <p><strong>Not included:</strong> Medical hospice care, legal/estate services, housekeeping, meal prep.</p>
-      </div>
-    </div>
-
-    <!-- Accordion 8 -->
-    <div class="accordion">
-      <div class="accordion-header">
-        Educational Outreach
-        <span class="arrow">▶</span>
-      </div>
-      <div class="accordion-content">
-        <p>We work with aging and end-of-life service organizations to offer education on legacy planning, advance directives, and holistic care options.</p>
+        <p><strong>Not included:</strong> Medical Diagnosis, Treatment, Evaluation, or Care. Legal/Estate Advice or Documentation. Funeral Sales or Documentation.</p>
       </div>
     </div>
 
