--- a/death-new.html
+++ b/death-new.html
@@ -45,11 +45,12 @@
       </div>
       <div class="accordion-content">
         <ul>
-          <li>Advance Care Facilitator:Create empowerment and peace of mind with your own voice for end-of-life care long before it is needed.</li>
-          </li>Referrals to specialists in end-of-life care such as Lawyers, Hospices, Fiancial Planners, and Funeral Directors.</li>
+          <li>Advance Care Facilitator: Create empowerment and peace of mind with your own voice for end-of-life care long before it is needed.</li>
+          <li>Referrals to specialists in end-of-life care such as Lawyers, Hospices, Fiancial Planners, and Funeral Directors.</li>
           <li>Consistant advocate through stages with focus on presence and relationship to entire care circle.</li>
-          <li>Memorial service preferences/planning.</li>
+          <li>Memorial Service Preferences/Planning.</li>
           <li>Living Funerals.</li>
+          <li>Legacy Project Creator(Life Review, Legacy Journaling, Memorial Letters)</li>
           <li>End-of-Life Binder Consultant.</li>  </ul>
       </div>
     </div>
@@ -57,12 +58,14 @@
     <!-- Accordion 2 -->
     <div class="accordion">
       <div class="accordion-header">
-        Reiki Practitioner Emotional and Spiritual Support
+        Reiki Practitioner / Emotional and Spiritual Support
         <span class="arrow">▶</span>
       </div>
       <div class="accordion-content">
-        <p>Offer a safe and compassionate space for exploring emotions, fears, and spiritual concerns. Using non-invasice energy channeling to promote relaxation, reduce stress, and enhance overall well-being emotionally and spiritually. Reiki is not a substitute for conventional medical treatment or religious in nature.</p>
-      <li>Letting Go Lounge to Spill Secrets, Regrets and "What-ifs".</ul>
+      <li>Offer a safe and compassionate space for exploring emotions, fears, and spiritual concerns.</li>
+      <li>Reiki uses non-invasive energy channeling to promote relaxation, reduce stress, and enhance overall well-being emotionally and spiritually.</li>
+      <li>Reiki is not a substitute for conventional medical treatment or religious in nature.</p>
+      <li>Letting Go Lounge to Spill Secrets, Regrets and "What-ifs".</li> </ul>
       </div>
     </div>
 
@@ -73,7 +76,8 @@
         <span class="arrow">▶</span>
       </div>
       <div class="accordion-content">
-        <li> Organizing of storage spaces, attics, basements, and garages to help with future downsizing.</li>
+        <li>Organizing of storage spaces, attics, basements, and garages to help with future downsizing.</li>
+        <li>Legacy Gifting</li>
         <li>Gift giving ceremonies or tea parties.</li>
         <li>Simplify one's life and posessions to make easier for loved ones after death.</li>  </ul>
       </div>
@@ -87,10 +91,9 @@
       </div>
       <div class="accordion-content">
         <li>Final Hours Vigil Sitting for those and their families needing end-of-life additional NON-Medical companionship and suport.</li>
-        <li>Respecting autonomy and advocating wishes of the dying.</li>
+        <li>Respecting Autonomy and Advocating Wishes of the Dying.</li>
         <li>Bridging Communication with Family and Medical/Hospice Careteams</li>
-        <li>Offering "No One Dies Alone" services for those dying in setting with no family</li>
-        
+        <li>Offering "No One Dies Alone" Services for Those Dying in Settings with No Family</li> </ul>
       </div>
     </div>
 
@@ -116,10 +119,12 @@
       </div>
       <div class="accordion-content">
         <ul>
-          <li>Warm Welcome Clarity Call: $80 (1 hour)</li>
-          <li>Overnight and on-call support available</li>
-          <li>Custom packages tailored to need</li>
-        </ul>
+          <li>What is a Death Doula: 25 min (No Charge)
+          <li>Comfort and Clarity Call for Support or Assist with individual Needs: $80 (1 hour)</li>
+          <li>Overnight and On-Call Support Available</li>
+          <li>Vulnerability Vault: Share Regrets and Last Words with a Death Doula: $50</li>
+          <li>Swedish Death Cleaning Coaching Intro Virtual Visit to Design a Plan: $50</li>
+          <li>Custom Packages Tailored to Individual Needs</li> </ul>
         <p><strong>Not included:</strong> Medical Diagnosis, Treatment, Evaluation, or Care. Legal/Estate Advice or Documentation. Funeral Sales or Documentation.</p>
       </div>
     </div>
