--- a/death-new.html
+++ b/death-new.html
@@ -107,7 +107,7 @@
         <li>Cafes held monthly or by request.</li>
         <li>Obituary Writing and Memories.</li>
         <li>Vinyl Farewells & Requiem Reads.</li>
-      </li>Public Speaking Presentations on End of Life Care and Planning.</ul>
+      <li>Public Speaking Presentations on End of Life Care and Planning.</li></ul>
       </div>
     </div>
 
